Fixed images and classes naming which caused overlapping with the Tiny version when both installed together

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     top: -1px;
 }
 
-.c4l-menu-title {
+.atto-c4l-menu-title {
     margin-bottom: 8px;
     margin-left: 3px;
     color: #387af1;
@@ -17,7 +17,7 @@
     text-transform: uppercase;
 }
 
-.c4l-dialog-button {
+.atto-c4l-dialog-button {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -44,8 +44,8 @@
     text-align: left;
 }
 
-.c4l-dialog-button:hover,
-.c4l-dialog-button:active {
+.atto-c4l-dialog-button:hover,
+.atto-c4l-dialog-button:active {
     transform: scale(1.04);
     -webkit-transform: scale(1.04);
     -moz-transform: scale(1.04);
@@ -53,12 +53,12 @@
     -o-transform: scale(1.04);
 }
 
-.c4l-dialog-button::before {
+.atto-c4l-dialog-button::before {
     margin-top: 4px;
     margin-right: 18px;
 }
 
-.c4l-dialog-button:after {
+.atto-c4l-dialog-button:after {
     content: " ";
     height: 24px;
     border-left: 1px solid #e0eaf6;
@@ -66,13 +66,13 @@
     left: 58px;
 }
 
-.c4l-plugin-container {
+.atto-c4l-plugin-container {
     padding: 1rem;
     background-color: #f6f7f8;
     border: 1px solid #dee2e6;
 }
 
-.c4l-buttons-grid {
+.atto-c4l-buttons-grid {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -82,81 +82,81 @@
 
 /* Contextual components buttons */
 
-.c4l-keyconcept-icon:before {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_keyconcept_icon]]);
+.atto-c4l-keyconcept-icon:before {
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_keyconcept_icon]]);
 }
 
-.c4l-tip-icon:before {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_tip_icon]]);
+.atto-c4l-tip-icon:before {
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_tip_icon]]);
 }
 
-.c4l-reminder-icon:before {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_reminder_icon]]);
+.atto-c4l-reminder-icon:before {
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_reminder_icon]]);
 }
 
-.c4l-attention-icon:before {
-    content: url([[pix:atto_c4l|c4l_attention_icon]]);
+.atto-c4l-attention-icon:before {
+    content: url([[pix:atto_c4l|atto_c4l_attention_icon]]);
 }
 
-.c4l-quote-icon:before {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_quote_icon]]);
+.atto-c4l-quote-icon:before {
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_quote_icon]]);
 }
 
-.c4l-dodontcards-icon:before {
-    content: url([[pix:atto_c4l|c4l_dodontcards_icon]]);
+.atto-c4l-dodontcards-icon:before {
+    content: url([[pix:atto_c4l|atto_c4l_dodontcards_icon]]);
 }
 
-.c4l-readingcontext-icon:before {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_readingcontext_icon]]);
+.atto-c4l-readingcontext-icon:before {
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_readingcontext_icon]]);
 }
 
-.c4l-example-icon:before {
-    content: url([[pix:atto_c4l|c4l_example_icon]]);
+.atto-c4l-example-icon:before {
+    content: url([[pix:atto_c4l|atto_c4l_example_icon]]);
 }
 
-.c4l-figure-icon:before {
-    content: url([[pix:atto_c4l|c4l_figure_icon]]);
+.atto-c4l-figure-icon:before {
+    content: url([[pix:atto_c4l|atto_c4l_figure_icon]]);
 }
 
-.c4l-tag-icon:before {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_tag_icon]]);
+.atto-c4l-tag-icon:before {
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_tag_icon]]);
 }
 
 
 /* Procedural components buttons */
 
-.c4l-estimatedtime-icon:before {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_estimatedtime_icon]]);
+.atto-c4l-estimatedtime-icon:before {
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_estimatedtime_icon]]);
 }
 
-.c4l-duedate-icon:before {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_duedate_icon]]);
+.atto-c4l-duedate-icon:before {
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_duedate_icon]]);
 }
 
-.c4l-proceduralcontext-icon:before {
-    content: url([[pix:atto_c4l|c4l_proceduralcontext_icon]]);
+.atto-c4l-proceduralcontext-icon:before {
+    content: url([[pix:atto_c4l|atto_c4l_proceduralcontext_icon]]);
 }
 
 
 /* Evaluative components buttons */
 
-.c4l-gradingvalue-icon:before {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_gradingvalue_icon]]);
+.atto-c4l-gradingvalue-icon:before {
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_gradingvalue_icon]]);
 }
 
-.c4l-expectedfeedback-icon:before {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_expectedfeedback_icon]]);
+.atto-c4l-expectedfeedback-icon:before {
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_expectedfeedback_icon]]);
 }
 
 
 /* Helper components buttons */
 
-.c4l-allpurposecard-icon:before {
-    content: url([[pix:atto_c4l|c4l_allpurposecard_icon]]);
+.atto-c4l-allpurposecard-icon:before {
+    content: url([[pix:atto_c4l|atto_c4l_allpurposecard_icon]]);
 }
 
-.c4l-inlinetag-icon:before {
-    content: url([[pix:atto_c4l|c4l_inlinetag_icon]]);
+.atto-c4l-inlinetag-icon:before {
+    content: url([[pix:atto_c4l|atto_c4l_inlinetag_icon]]);
 }
 
 
@@ -201,10 +201,10 @@
     border-radius: 0;
 }
 
-.c4l-spacer + .c4l-keyconcept {
+.atto-c4l-spacer + .c4l-keyconcept {
     margin: 0 auto;
 }
-    
+
 .c4l-keyconcept p:last-of-type {
     margin-bottom: 0;
 }
@@ -233,7 +233,7 @@
 }
 
 .c4l-tip:after {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_tip]]);
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_tip]]);
     position: absolute;
     top: 6px;
     right: -3px;
@@ -263,7 +263,7 @@
 }
 
 .c4l-reminder:after {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_reminder]]);
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_reminder]]);
     position: absolute;
     top: 6px;
     right: -3px;
@@ -293,7 +293,7 @@
 }
 
 .c4l-attention:after {
-    content: url([[pix:atto_c4l|c4l_attention]]);
+    content: url([[pix:atto_c4l|atto_c4l_attention]]);
     position: absolute;
     top: 6px;
     right: -3px;
@@ -348,13 +348,13 @@
 }
 
 .c4l-quote-text p:first-of-type:before {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_quote_open]]);
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_quote_open]]);
     position: relative;
     top: -4px;
     margin-right: 2px;
 } 
 .c4l-quote-text p:last-of-type::after {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_quote_close]]);
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_quote_close]]);
     position: relative;
     top: -2px;
     margin-left: 2px;
@@ -405,7 +405,7 @@
 }
 
 .c4l-dodontcards-do::before {
-    content: url([[pix:atto_c4l|c4l_docard]]);
+    content: url([[pix:atto_c4l|atto_c4l_docard]]);
     position: absolute;
     top: 12px;
     right: 12px;
@@ -422,7 +422,7 @@
 }
 
 .c4l-dodontcards-dont::before {
-    content: url([[pix:atto_c4l|c4l_dontcard]]);
+    content: url([[pix:atto_c4l|atto_c4l_dontcard]]);
     position: absolute;
     top: 12px;
     right: 12px;
@@ -601,7 +601,7 @@
 }
 
 .c4l-estimatedtime:before {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_estimatedtime]]);
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_estimatedtime]]);
     position: absolute;
     left: 12px;
 }
@@ -625,7 +625,7 @@
 }
 
 .c4l-duedate:after {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_duedate]]);
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_duedate]]);
     position: absolute;
     left: 12px;
 }
@@ -671,7 +671,7 @@
 }
 
 .c4l-gradingvalue:after {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_gradingvalue]]);
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_gradingvalue]]);
     position: absolute;
     left: 12px;
     top: 6px;
@@ -705,7 +705,7 @@
 }
 
 .c4l-expectedfeedback:after {
-    content: url([[pix:atto_c4l|noun_project_icons/c4l_expectedfeedback]]);
+    content: url([[pix:atto_c4l|noun_project_icons/atto_c4l_expectedfeedback]]);
     position: absolute;
     bottom: 6px;
     right: -3px;
